hello-app-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: hello-app-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: hello-app
  type: NodePort
